# 3D-model

./: README.md
CG_hw1/: CMakeLists.txt
CG_hw1/src/: CG2023_HW1.cpp  TriangleMesh.cpp  TriangleMesh.h
CG_hw2/: CMakeLists.txt
CG_hw2/shaders/: phong_shading_demo.fs  phong_shading_demo.vs
CG_hw2/src/: CG2023_HW2.cpp  headers.h  light.h  shaderprog.cpp  shaderprog.h  trianglemesh.cpp  trianglemesh.h
CG_hw3/: CMakeLists.txt  build.bat
CG_hw3/shaders/: phong_shading_demo.fs
CG_hw3/src/: CG2023_HW3.cpp  headers.h  light.h  shaderprog.cpp  shaderprog.h  skybox.cpp  trianglemesh.cpp  trianglemesh.h
